# traffic-fingerprinting

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
dashboard/: app.py  requirements.txt
results/alexa_dataset/: evaluation_results.json  expanded_results.json
results/website_eval/: evaluation_results.json
scripts/: 1a_generate_book_data.py  1a_run_evaluation.py  1a_run_expanded_evaluation.py  1a_save_results_and_figures.py  1b_capture_website_traffic.py  1b_run_website_evaluation.py  1b_validate_website_dataset.py
src/traffic_fingerprinting/: __init__.py  classifiers.py  data_loader.py  features.py
